<resources>
    <string name="app_name">Immunization</string>
    <string name="bo_qua">BỎ QUA</string>
    <string name="text">MANG LẠI SỰ TIỆN LỢI,THOẢI MÁI NHẤT CHO KHÁCH HÀNG\nCung cấp thêm cho khách hàng một phương tiện đặt xe\n thông minh,hiệu quả và dễ sử dụng</string>
    <string name="tiem_chung">Sổ Tiêm Chủng</string>
    <string name="da_qua">Đã Qua</string>
    <string name="sap_tiem">Sắp Tiêm</string>
    <string name="tat_ca">Tất Cả</string>
    <string name="statistical">Thống Kê</string>
    <string name="other">Khác</string>
    <string name="children">Bé yêu</string>
    <string name="vaccine">Vắc Xin</string>
    <string name="so_tiem">Sổ tiêm</string>
    <string name="tv_dialog">Xóa thông tin</string>
    <string name="tv_dialog_information">Thông tin lưu ý</string>
    <string name="tv_dicription_information">Mọi thông tin của ứng dụng chỉ mang tính tham khảo.Quý vị cần tham khảo ý kiến\n bác sĩ chuyên khoa y tế dự phòng trước\nkhi sử dụng bất kì thông tin gì
        ,chúng tôi\n không chịu trách nhiệm gì về việc sử dụng thông tin của quý vị.Xin cảm ơn!</string>
    <string name="sending">Gửi Thành Công</string>
    <string name="choose_vaccine">Lựa chọn vắc xin cần tiêm cho bé A</string>
    <string name="tv_statistical">Mẹ nhớ đưa bé đi tiêm để đảm\nbảo sức khỏe cho bé nhé!</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start" translatable="false">GOT IT</string>
    <string name="data_empty">Danh sách bé trống</string>
    <string name="text_forgot">*Vui lòng nhập địa chỉ email đã đăng ký.</string>
    <string name="text_pass">*Nhập mật khẩu mới để đăng nhập.</string>
    <string name="text_verification">*Vui lòng điền mã xác minh đã được gửi đến địa chỉ email\n**********g@gmail.com</string>
    <string name="add_baby">Thêm bé thành công</string>
    <string name="delete_baby">Xóa thành công</string>
    <string name="edit">Sửa thành công</string>

    <string name="change_language_title">Ngôn ngữ</string>
    <string name="language_vietnamese" translatable="false">Tiếng việt</string>
    <string name="language_english" translatable="false">English</string>
    <string name="notification">Cài Đặt Thông Báo</string>
    <string name="information_note">Thông Tin Lưu Ý</string>
    <string name="vote">Đánh Giá Ứng Dụng</string>
    <string name="share_app">Chia Sẻ Ứng Dụng</string>
    <string name="feedback">Góp Ý Ứng Dụng</string>
    <string name="another_app">Ứng Dụng Khác</string>
    <string name="log_out">Đăng Xuất</string>
    <string name="list_baby">Danh Sách Các Bé</string>
    <string name="other_information">Thông Tin Khác</string>
    <string name="vaccination_book">Sổ Tiêm Chủng</string>
    <string name="remember_the_password">Nhớ mật khẩu</string>
    <string name="forgot_your_login_information">Quên mật khẩu đăng nhập?</string>
    <string name="register">Đăng ký</string>
    <string name="log_in">Đăng nhập</string>
    <string name="user_name">Tên đăng nhập</string>
    <string name="pass_word">Mật khẩu</string>
    <string name="baby_name">baby_name</string>
    <string name="miss">Bỏ lỡ :</string>
    <string name="not_injected">Chưa tiêm :</string>
    <string name="tv_update">Đã có bản cập nhật mới,cập nhật ngay</string>
    <string name="btn_Yes">Có</string>
    <string name="btn_No">Không</string>
    <string name="tv_feedback">Hòm Thư Góp Ý</string>
    <string name="edit_injected">Sửa Thông Tin Mũi Tiêm</string>
    <string name="detail">Chi Tiết Mũi Tiêm</string>
    <string name="baby_information">Thông Tin Bé</string>
    <string name="delete_baby_infomation">Xóa bé khỏi danh sách</string>
    <string name="tv_edit_injected">Thay đổi thông tin mũi tiêm thành công!</string>
    <string name="message">Vui lòng đợi dữ liệu đang xử lý ...</string>
    <string name="message_box_title">Lịch tiêm phòng cho bé</string>
    <string name="message_dialog">Những thông tin trong này chỉ mang tính chất tham khảo !!!</string>
    <string name="emrty">Dữ liệu trống...</string>
    <string name="textNotification">Hôm nay</string>
    <string name="title">Lưu ý</string>
    <string name="notifi">Cài Đặt Thông Báo</string>
    <string name="setting">Cài Đặt</string>
    <string name="toast">Yêu cầu điền đầy đủ thông tin</string>
    <string name="injected">Đã tiêm :</string>
    <string name="miss_pager">Bỏ Lỡ</string>
    <string name="all_pager">Tất Cả</string>
    <string name="injected_pager">Đã Tiêm</string>
    <string name="not_injected_pager">Chưa Tiêm</string>
    <string name="error">Lỗi</string>
    <string name="success">Đăng nhập thành công</string>
    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_vietnamese</item>
    </string-array>
</resources>
