<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_6"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">
    <LinearLayout
        android:layout_marginTop="30dp"
       android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/artboard12" />
        <TextView
            android:padding="10dp"
            android:gravity="center"
            android:textColor="#C03A6A"
            android:textSize="18sp"
            android:text="@string/vaccination_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <EditText
            android:maxLines="1"
            android:id="@+id/edt_name_login"
            android:gravity="center_horizontal"
            android:hint="@string/user_name"
            android:layout_margin="10dp"
            android:textColorHint="#130404"
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <EditText
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColorHint="#130404"
            android:id="@+id/edt_password"
            android:gravity="center_horizontal"
            android:hint="@string/pass_word"
            android:layout_margin="10dp"
            android:background="@drawable/custom_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/checkbox"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:textColor="#C03869"
            android:text="@string/remember_the_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true" />
        <TextView
            android:maxLines="2"
            android:id="@+id/tv_forget"
            android:textColor="#C03869"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_alignParentRight="true"
            android:text="@string/forgot_your_login_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <LinearLayout
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_register"
            android:layout_weight="1"
          android:textColor="#EB6B0B"
            android:textAllCaps="false"
            android:text="@string/register"
            android:background="@drawable/shape_custom"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

        <Button
           android:id="@+id/btn_login"
            android:layout_weight="1"
            android:layout_marginLeft="25dp"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:text="@string/log_in"
            android:background="@drawable/shape_custom_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>