<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
       android:padding="20dp"
        android:background="@color/colorBG1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:text="@string/tv_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_yes"
                android:layout_weight="1"
                android:text="@string/btn_Yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:visibility="gone"
                android:id="@+id/btn_no"
                android:layout_weight="1"
                android:text="@string/btn_No"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>