<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.CategoriActivity">

    <FrameLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:background="@drawable/group_218"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="80dp">
    <LinearLayout
        android:weightSum="5"
        android:layout_marginTop="42dp"
        android:id="@+id/llBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <com.t3h.immunization.customize.ItemBottomBar
            android:layout_marginLeft="32dp"
            android:id="@+id/ivImage1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            app:bottomBarActive="false"
            app:bottomBarIconActive="@drawable/syringe"
            app:bottomBarIconNormal="@drawable/ic_syringe_2"
            app:bottomContent="@string/vaccine"
            app:colorTextActive="@color/colorBG1"
            app:colorTextNormal="@color/colortexttab" />

        <com.t3h.immunization.customize.ItemBottomBar
            android:id="@+id/ivImage2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            app:bottomBarActive="false"
            app:bottomBarIconActive="@drawable/test"
            app:bottomBarIconNormal="@drawable/ic_test_2"
            app:bottomContent="@string/statistical"
            app:colorTextActive="@color/colorBG1"
            app:colorTextNormal="@color/colortexttab" />

        <com.t3h.immunization.customize.ItemBottomBar
            android:id="@+id/ivImage3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            app:bottomBarActive="true"
            app:bottomBarIconActive="@drawable/babygroup"
            app:bottomBarIconNormal="@drawable/ic_avatar"
            app:bottomContent="@string/children"
            app:colorTextActive="@color/colorBG1"
            app:colorTextNormal="@color/colortexttab" />

        <com.t3h.immunization.customize.ItemBottomBar
            android:id="@+id/ivImage4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            app:bottomBarActive="false"
            app:bottomBarIconActive="@drawable/group249"
            app:bottomBarIconNormal="@drawable/ic_notebook"
            app:bottomContent="@string/so_tiem"
            app:colorTextActive="@color/colorBG1"
            app:colorTextNormal="@color/colortexttab" />


        <com.t3h.immunization.customize.ItemBottomBar
            android:layout_marginRight="30dp"
            android:id="@+id/ivImage5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            app:bottomBarActive="false"
            app:bottomBarIconActive="@drawable/group252"
            app:bottomBarIconNormal="@drawable/ic_chat"
            app:bottomContent="@string/other"
            app:colorTextActive="@color/colorBG1"
            app:colorTextNormal="@color/colortexttab" />
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>