<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeLanguageActivity">
    <RelativeLayout
        android:padding="10dp"
        android:background="@color/colorBG1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/im_back_language"
            android:src="@drawable/ic_group_131"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            android:textSize="22dp"
            android:text="@string/change_language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radioGroup_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@null"
                android:layoutDirection="rtl"
                android:onClick="change"
                android:text="@string/language_english"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/language_english"
                android:layout_gravity="start"
                android:checked="false"/>
            <RadioButton
                android:id="@+id/radio_vietnamese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@null"
                android:layoutDirection="rtl"
                android:onClick="change"
                android:text="@string/language_vietnamese"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                tools:text="@string/language_vietnamese"
                android:layout_gravity="start"
                android:checked="false"/>

        </RadioGroup>
    </LinearLayout>
</LinearLayout>