<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_gravity="center"
        android:background="@drawable/group_500"
        android:layout_width="300dp"
        android:layout_height="450dp">
        <ImageView
            android:id="@+id/avatar"
            android:layout_centerInParent="true"
            android:src="@drawable/avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"/>
        <LinearLayout
            android:layout_marginTop="250dp"
            android:layout_toLeftOf="@id/avatar"
            android:gravity="center"
            android:background="@drawable/ic_group_501"
            android:orientation="vertical"
            android:layout_width="70dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/im_have_injected"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_group_490"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:id="@+id/have_injected"
                android:layout_gravity="center_horizontal"
                android:textColor="#971846"
                android:textSize="10sp"
                android:text="@string/injected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_marginTop="280dp"
            android:layout_toRightOf="@id/avatar"
            android:background="@drawable/ic_group_501"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/im_about_inject"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_group_490" />
            <TextView
                android:id="@+id/miss_injected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/miss"
                android:textColor="#971846"
                android:textSize="10sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_toRightOf="@id/avatar"
            android:gravity="center"
            android:background="@drawable/ic_group_501"
            android:orientation="vertical"
            android:layout_width="80dp"
            android:layout_height="60dp">
            <ImageView
                android:id="@+id/im_miss"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_group_490"
                android:layout_width="20dp"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/not_injected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/not_injected"
                android:textColor="#971846"
                android:textSize="10sp" />
        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shape_custom_button"
            android:layout_alignParentBottom="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/name_baby"
                android:text="@string/baby_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <View
                android:layout_marginRight="10dp"
                android:background="#009688"
                android:layout_width="1px"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btn_repair"
                android:background="@drawable/group612"
                android:layout_toRightOf="@id/name"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>